2020-10-19  Mark Wielard  <mark@klomp.org>

	* Makefile.am (modules): Remove tilegx.
	(tilegx_SRCS): Removed.
	(libebl_backends_a_SOURCES): Remove tilegx_SRCS.
	* tilegx_corenote.c: Removed.
	* tilegx_init.c: Removed.
	* tilegx_regs.c: Removed.
	* tilegx_reloc.def: Removed.
	* tilegx_retval.c: Removed.
	* tilegx_symbol.c: Removed.

2020-10-19  Mark Wielard  <mark@klomp.org>

	* Makefile.am (i386_SRCS): Remove i386_syscall.c.
	(x86_64_SRCS): Remove x86_64_syscall.c.
	(ppc_SRCS): Remove ppc_syscall.c.
	* i386_init.c (i386_init): Remove syscall_abi HOOK.
	* i386_syscall.c: Delete.
	* ppc64_init.c (ppc64_init): Remove syscall_abi HOOK.
	* ppc_syscall.c: Delete.
	* x86_64_init.c (x86_64_init): Remove syscall_abi HOOK.
	* x86_64_syscall.c: Delete.

2020-08-28  Mark Wielard  <mark@klomp.org>

	* aarch64_init.c (aarch64_init): Hook dynamic_tag_name and
	dynamic_tag_check.
	* aarch64_symbol.c (aarch64_dynamic_tag_name): New function.
	(aarch64_dynamic_tag_check): Likewise.

2020-06-16  Mark Wielard  <mark@klomp.org>

	* common-reloc.c (reloc_nametable): Make zero a 1 char array.
	Initialize it as an array { '\0' }.
	(reloc_type_name): Access zero as an array.

2020-06-10  Mark Wielard  <mark@klomp.org>

	* aarch64_init.c (aarch64_init): Remove ehlen, return eh.
	* alpha_init.c (alpha_init): Likewise.
	* arm_init.c (arm_init): Likewise.
	* bpf_init.c (bpf_init): Likewise.
	* csky_init.c (csky_init): Likewise.
	* i386_init.c (i386_init): Likewise.
	* ia64_init.c (ia64_init): Likewise.
	* m68k_init.c (m68k_init): Likewise.
	* ppc64_init.c (ppc64_init): Likewise.
	* ppc_init.c (ppc_init): Likewise.
	* riscv_init.c (riscv_init): Likewise.
	* s390_init.c (s390_init): Likewise.
	* sh_init.c (sh_init): Likewise.
	* sparc_init.c (sparc_init): Likewise.
	* tilegx_init.c (tilegx_init): Likewise.
	* x86_64_init.c (x86_64_init): Likewise.
	* libebl_CPU.h (init): Adjust EBLHOOK signature.

2019-07-05  Omar Sandoval  <osandov@fb.com>
